--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1.js"
+      "dest": "/api/$1"
     },
     {
       "src": "/(.*)",
@@ -22,3 +22,4 @@
     }
   ]
 }
+
